engine/scripting/native_api/dse_api.gen.h

DSE_CAPI_GEN float dse_post_process_get_vignette_softness(uint32_t e);
DSE_CAPI_GEN void  dse_post_process_set_vignette_softness(uint32_t e, float v);
DSE_CAPI_GEN int  dse_post_process_get_film_grain_enabled(uint32_t e);
DSE_CAPI_GEN void dse_post_process_set_film_grain_enabled(uint32_t e, int v);
DSE_CAPI_GEN float dse_post_process_get_film_grain_intensity(uint32_t e);
DSE_CAPI_GEN void  dse_post_process_set_film_grain_intensity(uint32_t e, float v);
DSE_CAPI_GEN float dse_post_process_get_film_grain_time_scale(uint32_t e);
DSE_CAPI_GEN void  dse_post_process_set_film_grain_time_scale(uint32_t e, float v);
DSE_CAPI_GEN int  dse_post_process_get_fxaa_enabled(uint32_t e);
DSE_CAPI_GEN void dse_post_process_set_fxaa_enabled(uint32_t e, int v);
DSE_CAPI_GEN int  dse_post_process_get_taa_enabled(uint32_t e);
DSE_CAPI_GEN void dse_post_process_set_taa_enabled(uint32_t e, int v);
DSE_CAPI_GEN float dse_post_process_get_taa_blend_factor(uint32_t e);
DSE_CAPI_GEN void  dse_post_process_set_taa_blend_factor(uint32_t e, float v);
DSE_CAPI_GEN int  dse_post_process_get_contact_shadow_enabled(uint32_t e);
DSE_CAPI_GEN void dse_post_process_set_contact_shadow_enabled(uint32_t e, int v);
DSE_CAPI_GEN float dse_post_process_get_contact_shadow_strength(uint32_t e);
DSE_CAPI_GEN void  dse_post_process_set_contact_shadow_strength(uint32_t e, float v);
DSE_CAPI_GEN int  dse_post_process_get_contact_shadow_steps(uint32_t e);
DSE_CAPI_GEN void dse_post_process_set_contact_shadow_steps(uint32_t e, int v);
DSE_CAPI_GEN float dse_post_process_get_contact_shadow_step_size(uint32_t e);
DSE_CAPI_GEN void  dse_post_process_set_contact_shadow_step_size(uint32_t e, float v);
DSE_CAPI_GEN int  dse_post_process_get_dof_enabled(uint32_t e);
DSE_CAPI_GEN void dse_post_process_set_dof_enabled(uint32_t e, int v);
DSE_CAPI_GEN float dse_post_process_get_dof_focus_distance(uint32_t e);
DSE_CAPI_GEN void  dse_post_process_set_dof_focus_distance(uint32_t e, float v);
DSE_CAPI_GEN float dse_post_process_get_dof_focus_range(uint32_t e);
DSE_CAPI_GEN void  dse_post_process_set_dof_focus_range(uint32_t e, float v);
DSE_CAPI_GEN float dse_post_process_get_dof_bokeh_radius(uint32_t e);
DSE_CAPI_GEN void  dse_post_process_set_dof_bokeh_radius(uint32_t e, float v);
DSE_CAPI_GEN int  dse_post_process_get_motion_blur_enabled(uint32_t e);
DSE_CAPI_GEN void dse_post_process_set_motion_blur_enabled(uint32_t e, int v);
DSE_CAPI_GEN float dse_post_process_get_motion_blur_intensity(uint32_t e);
DSE_CAPI_GEN void  dse_post_process_set_motion_blur_intensity(uint32_t e, float v);
DSE_CAPI_GEN int  dse_post_process_get_motion_blur_samples(uint32_t e);
DSE_CAPI_GEN void dse_post_process_set_motion_blur_samples(uint32_t e, int v);
DSE_CAPI_GEN int  dse_post_process_get_ssr_enabled(uint32_t e);
DSE_CAPI_GEN void dse_post_process_set_ssr_enabled(uint32_t e, int v);
DSE_CAPI_GEN float dse_post_process_get_ssr_max_distance(uint32_t e);
DSE_CAPI_GEN void  dse_post_process_set_ssr_max_distance(uint32_t e, float v);
DSE_CAPI_GEN float dse_post_process_get_ssr_thickness(uint32_t e);
DSE_CAPI_GEN void  dse_post_process_set_ssr_thickness(uint32_t e, float v);
DSE_CAPI_GEN float dse_post_process_get_ssr_step_size(uint32_t e);
DSE_CAPI_GEN void  dse_post_process_set_ssr_step_size(uint32_t e, float v);
DSE_CAPI_GEN int  dse_post_process_get_ssr_max_steps(uint32_t e);
DSE_CAPI_GEN void dse_post_process_set_ssr_max_steps(uint32_t e, int v);
DSE_CAPI_GEN float dse_post_process_get_ssr_fade_distance(uint32_t e);
DSE_CAPI_GEN void  dse_post_process_set_ssr_fade_distance(uint32_t e, float v);
DSE_CAPI_GEN float dse_post_process_get_ssr_max_roughness(uint32_t e);
DSE_CAPI_GEN void  dse_post_process_set_ssr_max_roughness(uint32_t e, float v);
DSE_CAPI_GEN int  dse_post_process_get_outline_enabled(uint32_t e);
DSE_CAPI_GEN void dse_post_process_set_outline_enabled(uint32_t e, int v);
DSE_CAPI_GEN void dse_post_process_get_outline_color(uint32_t e, float* x, float* y, float* z);
DSE_CAPI_GEN void dse_post_process_set_outline_color(uint32_t e, float x, float y, float z);
DSE_CAPI_GEN float dse_post_process_get_outline_thickness(uint32_t e);
DSE_CAPI_GEN void  dse_post_process_set_outline_thickness(uint32_t e, float v);
DSE_CAPI_GEN float dse_post_process_get_outline_depth_threshold(uint32_t e);
DSE_CAPI_GEN void  dse_post_process_set_outline_depth_threshold(uint32_t e, float v);
DSE_CAPI_GEN float dse_post_process_get_outline_normal_threshold(uint32_t e);
DSE_CAPI_GEN void  dse_post_process_set_outline_normal_threshold(uint32_t e, float v);
DSE_CAPI_GEN int  dse_post_process_get_light_shaft_enabled(uint32_t e);
DSE_CAPI_GEN void dse_post_process_set_light_shaft_enabled(uint32_t e, int v);
DSE_CAPI_GEN void dse_post_process_get_light_shaft_color(uint32_t e, float* x, float* y, float* z);
DSE_CAPI_GEN void dse_post_process_set_light_shaft_color(uint32_t e, float x, float y, float z);
DSE_CAPI_GEN float dse_post_process_get_light_shaft_density(uint32_t e);
DSE_CAPI_GEN void  dse_post_process_set_light_shaft_density(uint32_t e, float v);
DSE_CAPI_GEN float dse_post_process_get_light_shaft_weight(uint32_t e);
DSE_CAPI_GEN void  dse_post_process_set_light_shaft_weight(uint32_t e, float v);
DSE_CAPI_GEN float dse_post_process_get_light_shaft_decay(uint32_t e);
DSE_CAPI_GEN void  dse_post_process_set_light_shaft_decay(uint32_t e, float v);
DSE_CAPI_GEN float dse_post_process_get_light_shaft_exposure(uint32_t e);