GameScripts/DSEngine.Runtime/Generated/Native.gen.cs


    [LibraryImport(Lib, EntryPoint = "dse_post_process_get_vignette_softness")]
    internal static partial float dse_post_process_get_vignette_softness(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_set_vignette_softness")]
    internal static partial void dse_post_process_set_vignette_softness(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_get_film_grain_enabled")]
    internal static partial int dse_post_process_get_film_grain_enabled(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_set_film_grain_enabled")]
    internal static partial void dse_post_process_set_film_grain_enabled(uint e, int v);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_get_film_grain_intensity")]
    internal static partial float dse_post_process_get_film_grain_intensity(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_set_film_grain_intensity")]
    internal static partial void dse_post_process_set_film_grain_intensity(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_get_film_grain_time_scale")]
    internal static partial float dse_post_process_get_film_grain_time_scale(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_set_film_grain_time_scale")]
    internal static partial void dse_post_process_set_film_grain_time_scale(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_get_fxaa_enabled")]
    internal static partial int dse_post_process_get_fxaa_enabled(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_set_fxaa_enabled")]
    internal static partial void dse_post_process_set_fxaa_enabled(uint e, int v);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_get_taa_enabled")]
    internal static partial int dse_post_process_get_taa_enabled(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_set_taa_enabled")]
    internal static partial void dse_post_process_set_taa_enabled(uint e, int v);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_get_taa_blend_factor")]
    internal static partial float dse_post_process_get_taa_blend_factor(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_set_taa_blend_factor")]
    internal static partial void dse_post_process_set_taa_blend_factor(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_get_contact_shadow_enabled")]
    internal static partial int dse_post_process_get_contact_shadow_enabled(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_set_contact_shadow_enabled")]
    internal static partial void dse_post_process_set_contact_shadow_enabled(uint e, int v);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_get_contact_shadow_strength")]
    internal static partial float dse_post_process_get_contact_shadow_strength(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_set_contact_shadow_strength")]
    internal static partial void dse_post_process_set_contact_shadow_strength(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_get_contact_shadow_steps")]
    internal static partial int dse_post_process_get_contact_shadow_steps(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_set_contact_shadow_steps")]
    internal static partial void dse_post_process_set_contact_shadow_steps(uint e, int v);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_get_contact_shadow_step_size")]
    internal static partial float dse_post_process_get_contact_shadow_step_size(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_set_contact_shadow_step_size")]
    internal static partial void dse_post_process_set_contact_shadow_step_size(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_get_dof_enabled")]
    internal static partial int dse_post_process_get_dof_enabled(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_set_dof_enabled")]
    internal static partial void dse_post_process_set_dof_enabled(uint e, int v);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_get_dof_focus_distance")]
    internal static partial float dse_post_process_get_dof_focus_distance(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_set_dof_focus_distance")]
    internal static partial void dse_post_process_set_dof_focus_distance(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_get_dof_focus_range")]
    internal static partial float dse_post_process_get_dof_focus_range(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_set_dof_focus_range")]
    internal static partial void dse_post_process_set_dof_focus_range(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_get_dof_bokeh_radius")]
    internal static partial float dse_post_process_get_dof_bokeh_radius(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_set_dof_bokeh_radius")]
    internal static partial void dse_post_process_set_dof_bokeh_radius(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_get_motion_blur_enabled")]
    internal static partial int dse_post_process_get_motion_blur_enabled(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_set_motion_blur_enabled")]
    internal static partial void dse_post_process_set_motion_blur_enabled(uint e, int v);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_get_motion_blur_intensity")]
    internal static partial float dse_post_process_get_motion_blur_intensity(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_set_motion_blur_intensity")]
    internal static partial void dse_post_process_set_motion_blur_intensity(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_get_motion_blur_samples")]
    internal static partial int dse_post_process_get_motion_blur_samples(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_set_motion_blur_samples")]
    internal static partial void dse_post_process_set_motion_blur_samples(uint e, int v);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_get_ssr_enabled")]
    internal static partial int dse_post_process_get_ssr_enabled(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_set_ssr_enabled")]
    internal static partial void dse_post_process_set_ssr_enabled(uint e, int v);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_get_ssr_max_distance")]
    internal static partial float dse_post_process_get_ssr_max_distance(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_set_ssr_max_distance")]
    internal static partial void dse_post_process_set_ssr_max_distance(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_get_ssr_thickness")]
    internal static partial float dse_post_process_get_ssr_thickness(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_set_ssr_thickness")]
    internal static partial void dse_post_process_set_ssr_thickness(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_get_ssr_step_size")]
    internal static partial float dse_post_process_get_ssr_step_size(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_set_ssr_step_size")]
    internal static partial void dse_post_process_set_ssr_step_size(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_get_ssr_max_steps")]
    internal static partial int dse_post_process_get_ssr_max_steps(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_set_ssr_max_steps")]
    internal static partial void dse_post_process_set_ssr_max_steps(uint e, int v);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_get_ssr_fade_distance")]
    internal static partial float dse_post_process_get_ssr_fade_distance(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_set_ssr_fade_distance")]
    internal static partial void dse_post_process_set_ssr_fade_distance(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_get_ssr_max_roughness")]
    internal static partial float dse_post_process_get_ssr_max_roughness(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_set_ssr_max_roughness")]
    internal static partial void dse_post_process_set_ssr_max_roughness(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_get_outline_enabled")]
    internal static partial int dse_post_process_get_outline_enabled(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_set_outline_enabled")]
    internal static partial void dse_post_process_set_outline_enabled(uint e, int v);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_get_outline_color")]
    internal static partial void dse_post_process_get_outline_color(uint e, out float x, out float y, out float z);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_set_outline_color")]
    internal static partial void dse_post_process_set_outline_color(uint e, float x, float y, float z);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_get_outline_thickness")]
    internal static partial float dse_post_process_get_outline_thickness(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_set_outline_thickness")]
    internal static partial void dse_post_process_set_outline_thickness(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_get_outline_depth_threshold")]
    internal static partial float dse_post_process_get_outline_depth_threshold(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_set_outline_depth_threshold")]
    internal static partial void dse_post_process_set_outline_depth_threshold(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_get_outline_normal_threshold")]
    internal static partial float dse_post_process_get_outline_normal_threshold(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_set_outline_normal_threshold")]
    internal static partial void dse_post_process_set_outline_normal_threshold(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_get_light_shaft_enabled")]
    internal static partial int dse_post_process_get_light_shaft_enabled(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_set_light_shaft_enabled")]
    internal static partial void dse_post_process_set_light_shaft_enabled(uint e, int v);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_get_light_shaft_color")]
    internal static partial void dse_post_process_get_light_shaft_color(uint e, out float x, out float y, out float z);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_set_light_shaft_color")]
    internal static partial void dse_post_process_set_light_shaft_color(uint e, float x, float y, float z);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_get_light_shaft_density")]
    internal static partial float dse_post_process_get_light_shaft_density(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_set_light_shaft_density")]
    internal static partial void dse_post_process_set_light_shaft_density(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_get_light_shaft_weight")]
    internal static partial float dse_post_process_get_light_shaft_weight(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_set_light_shaft_weight")]
    internal static partial void dse_post_process_set_light_shaft_weight(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_get_light_shaft_decay")]
    internal static partial float dse_post_process_get_light_shaft_decay(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_set_light_shaft_decay")]
    internal static partial void dse_post_process_set_light_shaft_decay(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_get_light_shaft_exposure")]
    internal static partial float dse_post_process_get_light_shaft_exposure(uint e);
